<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dwijantojohan.lie.picmicrocontroller.TimerActivity"
    android:orientation="horizontal">
        <TableRow
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_Clock"
                android:id="@+id/button"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_Timer0"
                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onClick" />

        </TableRow>
        <TableRow
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_Timer1"
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_Timer2"
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onClick" />

        </TableRow>
    </TableLayout>




