<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dwijantojohan.lie.picmicrocontroller.Timer0Activity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chkbox_EnablePrescaller"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/checkBox"
        android:entries="@array/prescaller8bits"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="30dp">




        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_reloadvalue"
                android:id="@+id/textView7"
                android:layout_column="0" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2pt"
                android:text="0x00"
                android:id="@+id/textView8"
                android:layout_column="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingLeft="2pt"
                android:paddingRight="4pt"
                android:text="le"
                android:id="@+id/textView9"
                android:layout_column="2" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:id="@+id/editText2"
                android:layout_column="3"
                android:text="0x00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2pt"
                android:text="le"
                android:id="@+id/textView11"
                android:layout_column="4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2pt"
                android:text="0xFF"
                android:id="@+id/textView12"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_period"
                android:id="@+id/textView14"
                android:layout_column="0" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2pt"
                android:text="0us"
                android:id="@+id/textView15"
                android:layout_column="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingLeft="2pt"
                android:paddingRight="4pt"
                android:text="le"
                android:id="@+id/textView16"
                android:layout_column="2" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:digits="0123456789ABCDEFabcdef"
                android:id="@+id/editText3"
                android:layout_column="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2pt"
                android:text="le"
                android:id="@+id/textView17"
                android:layout_column="4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2pt"
                android:text="32.7680ms"
                android:id="@+id/textView18"
                android:layout_column="5" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
